--- a/index.html
+++ b/index.html
@@ -1,1 +1,142 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Project: Recipe book</title>
+        <meta charset="utf-8">
+        <style>
+        body {
+            font-family: "Lucida Console", Monaco, monospace;
+            font-size: 2vw;
+            background-color: #333333;
+            color: #aaff80;
+        }
+        h1 {
+            font-size: 6vw;
+        }
+        h1.small {
+            font-size: 4vw;
+        }
+        h2 {
+            font-size: 3vw;
+        }
+        h6 {
+            font-size: 2vw;
+            color: #333333;
+            background: #ff5c33;
+            padding: 2px;
+        }
+        a:link {
+            color: #ddd;
+            text-decoration: none;
+        }
+        a:visited {
+            color: #8c8c8c;
+            text-decoration: none;
+        }
+        a:hover {
+            color: #ff5c33;
+            text-decoration: none;
+        }
+        table, th, td {
+            background: #544c45;
+            border: 1px;
+            border-collapse: collapse;
+            border-color: #ffffff;
+            table-layout: auto;
+        }
+        th, td {
+            padding: 6px;
+        }
+        .kerbol {
+            height: 1300px;
+            width: 1300px;
+            background-color: #ffff80;
+            border-radius: 50%;
+            display: inline-block;
+        }
+        .moho {
+            height: 13px;
+            width: 13px;
+            background-color: #9f7e60;
+            border-radius: 50%;
+            display: inline-block;
+        }
+        .eve {
+            height: 35px;
+            width: 35px;
+            background-color: #b84dff;
+            border-radius: 50%;
+            display: inline-block;
+        }
+        .kerbin {
+            height: 30px;
+            width: 30px;
+            background-color: #3399ff;
+            border-radius: 50%;
+            display: inline-block;
+        }
+        .mun {
+            height: 10px;
+            width: 10px;
+            background-color: #737373;
+            border-radius: 50%;
+            display: inline-block;
+        }
+        .minmus {
+            height: 3px;
+            width: 3px;
+            background-color: #99ffcc;
+            border-radius: 50%;
+            display: inline-block;
+        }
+        .duna {
+            height: 16px;
+            width: 16px;
+            background-color: #ff5c33;
+            border-radius: 50%;
+            display: inline-block;
+        }
+        .dres {
+            height: 7px;
+            width: 7px;
+            background-color: #a6a6a6;
+            border-radius: 50%;
+            display: inline-block;
+        }
+        .jool {
+            height: 300px;
+            width: 300px;
+            background-color: #75cc00;
+            border-radius: 50%;
+            display: inline-block;
+        }
+        .eeloo {
+            height: 10px;
+            width: 10px;
+            background-color: #eeeeee;
+            border-radius: 50%;
+            display: inline-block;
+        }
+        </style>
+    </head>
+    <body>
+    <div style="text-align:center">
+        <h1 class="small" id="start-over"></h1>
+        <h1></h1>
+        <h6>Remove Before Flight</h6>
+        <span class="kerbol"></span>
+        <span class="moho"></span>
+        <span class="eve"></span>
+        <span class="kerbin"></span>
+        <span class="mun"></span>
+        <span class="minmus"></span>
+        <span class="duna"></span>
+        <span class="dres"></span>
+        <span class="jool"></span>
+        <span class="eeloo"></span>
+    </div>
+
+
+    <h6>Kerbolelestial bodies drawn approximately to scale.</h6>
+    </body>
+</html>
