--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+l <!DOCTYPE html>
 <html>
     <head>
-        <title>Project: Recipe book</title>
+        <title>Kerbol System</title>
         <meta charset="utf-8">
         <style>
         body {
