--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Project: Recipe book</title>
+        <title>Peaches</title>
         <meta charset="utf-8">
         <style>
         body {
@@ -9,15 +9,7 @@
             font-size: 2vw;
             background-color: #333333;
             color: #aaff80;
-        }
-        h1 {
-            font-size: 6vw;
-        }
-        h1.small {
-            font-size: 4vw;
-        }
-        h2 {
-            font-size: 3vw;
+            overflow: hidden;
         }
         h6 {
             font-size: 2vw;
@@ -37,44 +29,13 @@
             color: #ff5c33;
             text-decoration: none;
         }
-        table, th, td {
-            background: #544c45;
-            border: 1px;
-            border-collapse: collapse;
-            border-color: #ffffff;
-            table-layout: auto;
+        div {
+          margin: 0;
+          position: absolute;
+          top: 50%;
+          left: 50%;
         }
-        th, td {
-            padding: 6px;
-        }
-        .kerbol {
-            height: 1300px;
-            width: 1300px;
-            background-color: #ffff80;
-            border-radius: 50%;
-            display: inline-block;
-        }
-        .moho {
-            height: 13px;
-            width: 13px;
-            background-color: #9f7e60;
-            border-radius: 50%;
-            display: inline-block;
-        }
-        .eve {
-            height: 35px;
-            width: 35px;
-            background-color: #b84dff;
-            border-radius: 50%;
-            display: inline-block;
-        }
-        .kerbin {
-            height: 30px;
-            width: 30px;
-            background-color: #3399ff;
-            border-radius: 50%;
-            display: inline-block;
-        }
+        /*
         .mun {
             height: 10px;
             width: 10px;
@@ -89,54 +50,191 @@
             border-radius: 50%;
             display: inline-block;
         }
-        .duna {
+        */
+        @keyframes moho {
+	         from {
+		           transform: rotate(0deg)
+		             translate(90px)
+		             rotate(0deg);
+	            }
+	         to {
+		           transform: rotate(-360deg)
+		             translate(90px)
+		               rotate(360deg);
+	            }
+        }
+        .moho-orbit {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            height: 13px;
+            width: 13px;
+            background-color: #9f7e60;
+            border-radius: 50%;
+            -moz-transform: translateX(-50%) translateY(-50%);
+            -webkit-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
+  	        animation: moho 3.7s infinite linear;
+        }
+        @keyframes eve {
+	         from {
+		           transform: rotate(0deg)
+		             translate(100px)
+		             rotate(0deg);
+	            }
+	         to {
+		           transform: rotate(-360deg)
+		             translate(100px)
+		               rotate(360deg);
+	            }
+        }
+        .eve-orbit {
+            height: 35px;
+            width: 35px;
+            background-color: #b84dff;
+            border-radius: 50%;
+  	        top: 50%;
+  	        left: 50%;
+            -moz-transform: translateX(-50%) translateY(-50%);
+            -webkit-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
+  	        animation: eve 4.1s infinite linear;
+        }
+        @keyframes kerbin {
+	         from {
+		           transform: rotate(0deg)
+		             translate(150px)
+		             rotate(0deg);
+	            }
+	         to {
+		           transform: rotate(-360deg)
+		             translate(150px)
+		               rotate(360deg);
+	            }
+        }
+        .kerbin-orbit {
+            height: 30px;
+            width: 30px;
+            background-color: #3399ff;
+            border-radius: 50%;
+  	        top: 50%;
+  	        left: 50%;
+            -moz-transform: translateX(-50%) translateY(-50%);
+            -webkit-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
+  	        animation: kerbin 5.4s infinite linear;
+        }
+        @keyframes duna {
+	         from {
+		           transform: rotate(0deg)
+		             translate(200px)
+		             rotate(0deg);
+	            }
+	         to {
+		           transform: rotate(-360deg)
+		             translate(200px)
+		               rotate(360deg);
+	            }
+        }
+        .duna-orbit {
             height: 16px;
             width: 16px;
             background-color: #ff5c33;
             border-radius: 50%;
-            display: inline-block;
+  	        top: 50%;
+  	        left: 50%;
+            -moz-transform: translateX(-50%) translateY(-50%);
+            -webkit-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
+  	        animation: duna 7.5s infinite linear;
         }
-        .dres {
+        @keyframes dres {
+	         from {
+		           transform: rotate(0deg)
+		             translate(300px)
+		             rotate(0deg);
+	            }
+	         to {
+		           transform: rotate(-360deg)
+		             translate(300px)
+		               rotate(360deg);
+	            }
+        }
+        .dres-orbit {
             height: 7px;
             width: 7px;
             background-color: #a6a6a6;
             border-radius: 50%;
-            display: inline-block;
+  	        top: 50%;
+  	        left: 50%;
+            -moz-transform: translateX(-50%) translateY(-50%);
+            -webkit-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
+  	        animation: dres 9.3s infinite linear;
         }
-        .jool {
+        @keyframes jool {
+	         from {
+		           transform: rotate(0deg)
+		             translate(400px)
+		             rotate(0deg);
+	            }
+	         to {
+		           transform: rotate(-360deg)
+		             translate(400px)
+		               rotate(360deg);
+	            }
+        }
+        .jool-orbit {
             height: 300px;
             width: 300px;
             background-color: #75cc00;
             border-radius: 50%;
-            display: inline-block;
+  	        top: -150px;
+  	        left: -150px;
+            -moz-transform: translateX(-50%) translateY(-50%);
+            -webkit-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
+  	        animation: jool 10.9s infinite linear;
         }
-        .eeloo {
-            height: 10px;
-            width: 10px;
+        @keyframes eeloo {
+	         from {
+		           transform: rotate(0deg)
+		             translate(600px)
+		             rotate(0deg);
+	            }
+	         to {
+		           transform: rotate(-360deg)
+		             translate(600px)
+		               rotate(360deg);
+	            }
+        }
+        .eeloo-orbit {
+  	        width: 10px;
+  	        height: 10px;
             background-color: #eeeeee;
             border-radius: 50%;
-            display: inline-block;
+            top: 50%;
+            left: 50%;
+            -moz-transform: translateX(-50%) translateY(-50%);
+            -webkit-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
+  	        animation: eeloo 15.2s infinite linear;
         }
         </style>
     </head>
     <body>
-    <div style="text-align:center">
-        <h1 class="small" id="start-over"></h1>
-        <h1></h1>
-        <h6>Remove Before Flight</h6>
-        <span class="kerbol"></span>
-        <span class="moho"></span>
-        <span class="eve"></span>
-        <span class="kerbin"></span>
-        <span class="mun"></span>
-        <span class="minmus"></span>
-        <span class="duna"></span>
-        <span class="dres"></span>
-        <span class="jool"></span>
-        <span class="eeloo"></span>
+    <div>
+        <h6>-Remove Before Flight-</h6>
+        <div class="moho-orbit"></div>
+        <div class="eve-orbit"></div>
+        <div class="kerbin-orbit"></div>
+        <div class="mun"></div>
+        <div class="minmus"></div>
+        <div class="duna-orbit"></div>
+        <div class="dres-orbit"></div>
+        <div class="jool-orbit"></div>
+        <div class="eeloo-orbit"></div>
     </div>
-
-
-    <h6>Kerbolelestial bodies drawn approximately to scale.</h6>
+    <h6>Kerbolelestial bodies and orbital velocities drawn approximately to scale.</h6>
     </body>
 </html>
