--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Peaches</title>
+        <title>GitHub - Woodrow Wiest</title>
         <meta charset="utf-8">
         <style>
         body {
@@ -235,6 +235,6 @@
         <div class="jool-orbit"></div>
         <div class="eeloo-orbit"></div>
     </div>
-    <h6>Kerbolelestial bodies and orbital velocities drawn approximately to scale.</h6>
+    <h6><a href="https://github.com/woodrowwiest" alt="go to woodrow's GitHub">github.com/woodrowwiest</a></h6>
     </body>
 </html>
