--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
             color: #aaff80;
             overflow: hidden;
         }
+	h5 {
+	    font-size: 2vw;
+	    background: none;
+	    padding: 2vw;
+	}
         h6 {
             font-size: 2vw;
             color: #333333;
@@ -235,6 +240,6 @@
         <div class="jool-orbit"></div>
         <div class="eeloo-orbit"></div>
     </div>
-    <h6><a href="https://github.com/woodrowwiest" alt="go to woodrow's GitHub">github.com/woodrowwiest</a></h6>
+    <h5><a href="https://github.com/woodrowwiest" alt="go to woodrow's GitHub">github.com/woodrowwiest</a></h5>
     </body>
 </html>
